--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mogoose": "0.0.1-security",
+    "mongoose": "^5.11.16",
     "morgan": "^1.10.0",
     "multer": "^1.4.2"
   }
