--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mogoose": "0.0.1-security",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "uuid": "^8.3.2"
   }
 }
